# Ex4

./: AStar.h  A_STAR_RESULTS.txt  BEST_FIRST_SEARCH_RESULTS.txt  BFS.h  BFS_RESULTS.txt  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  CellMatrix.h  ClientHandler.h  DFS.h  DFS_RESULTS.txt  EX4  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  Matrix.h  MyClientSearchClientHandler.cpp  MyClientSearchClientHandler.h  MyPriorityQueue.h  MySerialServer.h  MyTestCLientHandler.cpp  MyTestClientHandler.cpp  MyTestClientHandler.h  ParallelServer.h  README.md  Searchable.h  Searcher.h  SearcherAdapter.h  Server.h  Solver.h  State.h  String.h  StringRevereseAdapter.cpp  StringReverseAdapter.h  StringReverser.h  compareStates.h  details.txt  parallel_tester.py  test.cpp  (+1 more)
